--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "wujianan9090@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php":">=7.3"
     },
